# bus-tracker

./: .gitignore  Makefile  pyproject.toml
data/: logs.db
src/bus_tracker/: __init__.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/bus_tracker/utils/: root_path.py
